--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.2.2",
-    "@angular/common": "^16.0.0",
+    "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
     "@angular/material": "^16.2.2",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.0.0",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.2.3",
@@ -34,9 +34,9 @@
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
     "qrcode-generator": "^1.4.4",
-    "rxjs": "~7.8.0",
+    "rxjs": "^6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
